# doc2md

./: .gitignore  README.md  doc2md.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
tests/: test_doc2md.py
