[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "doc2md"
dynamic = ["version"]
description = "Convert PDFs and images to LLM-ready Markdown using NVIDIA Nemotron 3 Nano Omni"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Cobus Greyling" },
]
keywords = ["markdown", "pdf", "ocr", "llm", "nvidia", "nemotron"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
    "openai>=1.30.0",
    "pymupdf>=1.24.0",
]

[project.scripts]
doc2md = "doc2md:main"

[project.urls]
Repository = "https://github.com/cobusgreyling/doc2md"

[tool.hatch.version]
path = "doc2md.py"
pattern = '__version__ = "(?P<version>[^"]+)"'

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
